# model/card.go
@@ -6,3 +6,19 @@ type Card struct {
 	Department string `gorm:"not null;size:40"`
 	Type       string `gorm:"not null;size:1"`
 }
+
+type CardReq struct {
+	Name       string `json:"name"`
+	Department string `json:"department"`
+	Type       string `json:"type"`
+}
+
+func CreateCard(card *Card) error {
+	result := db.Create(card)
+	return result.Error
+}
+
+func DeleteCard(id uint64) error {
+	result := db.Delete(id)
+	return result.Error
+}
